# scikit-surgerypclcpp

./: .travis.yml  CMakeLists.txt  CTestConfig.cmake  INSTALLATION.txt  README.md  README.txt  Usesksurgerypclcpp.cmake.in  appveyor.yml  config.sh  setup.py  sksurgerypclcppConfig.cmake.in  sksurgerypclcppConfigure.h.in  travis_cmake_build.sh  versioneer.py
.github/workflows/: deploy_linux.yml  deploy_mac.yml  deploy_windows.yml
CMake/: CPackOptions.cmake.in  CPackSetup.cmake  CTestContinuous.cmake.in  CTestCustom.cmake.in  FindEigen.cmake  Findgflags.cmake.in  Findglog.cmake.in  StartVS.bat.in  SuperBuild.cmake  sksAddArrayFire.cmake  sksAddBoost.cmake  sksAddDocs.cmake  sksAddEigen.cmake  sksAddFLANN.cmake  sksAddGuiProjects.cmake  sksAddOpenCV.cmake  sksAddPCL.cmake  sksAddPythonBindings.cmake  sksAddUnityWrapper.cmake  sksAddVTK.cmake  sksAddgflags.cmake  sksAddglog.cmake  sksExternalProjectHelperMacros.cmake  sksFunctionFixInstallNameForMac.cmake  sksIncludeArrayFire.cmake  sksIncludeBoost.cmake  sksIncludeCUDA.cmake  sksIncludeDocs.cmake  sksIncludeEigen.cmake  sksIncludeMPI.cmake  sksIncludeOpenCV.cmake  sksIncludeOpenMP.cmake  sksIncludePCL.cmake  sksIncludePythonBindings.cmake  sksIncludeQt.cmake  sksIncludeVTK.cmake  sksIncludegflags.cmake  sksIncludeglog.cmake  sksMacroCreateGuiApplication.cmake  sksMacroInstallCommandLineApp.cmake  (+8 more)
CMake/ExternalProjects/: ArrayFire.cmake  Boost.cmake  Eigen.cmake  FLANN.cmake  FLANN.patch  OpenCV.cmake  PCL-Boost.patch  PCL.cmake  VTK.cmake  gflags.cmake  glog.cmake
Code/: CMakeLists.txt
Code/CommandLineApps/: CMakeLists.txt  sksMyFirstApp.cpp
Code/GuiApps/: CMakeLists.txt
Code/GuiApps/QMLVTKDemo/: CMakeLists.txt
Code/GuiApps/QMLVTKDemo/App/: main.cpp
Code/GuiApps/QMLVTKDemo/Model/: sksBaseModel.cpp  sksBaseModel.h  sksCubeModel.cpp  sksCubeModel.h  sksTriangleModel.cpp  sksTriangleModel.h
Code/GuiApps/QMLVTKDemo/View/: main.qml  sksQOpenGLTriangleRenderer.cpp  sksQOpenGLTriangleRenderer.h  sksQQuickVTKView.cpp  sksQQuickVTKView.h
Code/GuiApps/QOpenGLDemo/: CMakeLists.txt  main.cpp  sksOpenGLMainWindow.cpp  sksOpenGLMainWindow.h  sksOpenGLWidget.cpp  sksOpenGLWidget.h
Code/GuiApps/QtVTKDemo/: CMakeLists.txt
Code/GuiApps/QtVTKDemo/App/: CMakeLists.txt  main.cpp  sksCentralWidget.cpp  sksCentralWidget.h  sksCentralWidget.ui  sksMainWindow.cpp  sksMainWindow.h  sksMainWindow.ui
Code/GuiApps/QtVTKDemo/Controller/: CMakeLists.txt  sksControlPanelWidget.cpp  sksControlPanelWidget.h  sksControlPanelWidget.ui  sksQtVTKControllerWin32ExportHeader.h  sksTwinSliderWidget.cpp  sksTwinSliderWidget.h
Code/GuiApps/QtVTKDemo/Model/: CMakeLists.txt  sksQtVTKModelWin32ExportHeader.h  sksVolumeRenderingModel.cpp  sksVolumeRenderingModel.h
Code/GuiApps/QtVTKDemo/View/: CMakeLists.txt  sksQtVTKViewWin32ExportHeader.h  sksVTKViewWidget.cpp  sksVTKViewWidget.h
Code/Lib/: CMakeLists.txt  sksBasicTypes.cpp  sksBasicTypes.h  sksDownSamplePointCloud.cpp  sksDownSamplePointCloud.h  sksException.cpp  sksException.h  sksExceptionMacro.h  sksFeatureMatch.cpp  sksFeatureMatch.h  sksFeatureMatchRANSAC.cpp  sksFeatureMatchRANSAC.h  sksGeneralizedIterativeClosestPoint.cpp  sksGeneralizedIterativeClosestPoint.h  sksIterativeClosestPoint.cpp  sksIterativeClosestPoint.h  sksMyFunctions.cpp  sksMyFunctions.h  sksPassThroughFilter.cpp  sksPassThroughFilter.h  sksRadiusRemovalFilter.cpp  sksRadiusRemovalFilter.h  sksRemoveOutliersFromPointCloud.cpp  sksRemoveOutliersFromPointCloud.h  sksWin32ExportHeader.h
Code/PythonBoost/: CMakeLists.txt  python_docstrings.h  sksConversionUtils.cpp  sksConversionUtils.h  sksDownSamplePointsWrapper.cpp  sksDownSamplePointsWrapper.h  sksFeatureMatchRANSACWrapper.cpp  sksFeatureMatchRANSACWrapper.h  sksFeatureMatchWrapper.cpp  sksFeatureMatchWrapper.h  sksGeneralizedIterativeClosestPointWrapper.cpp  sksGeneralizedIterativeClosestPointWrapper.h  sksIterativeClosestPointWrapper.cpp  sksIterativeClosestPointWrapper.h  sksLibPython.cpp  sksLibPythonWithOpenCV.cpp  sksPassThroughFilterWrapper.cpp  sksPassThroughFilterWrapper.h  sksPythonDocstrings.h  sksRadiusRemovalFilterWrapper.cpp  sksRadiusRemovalFilterWrapper.h  sksRemoveOutlierPointsWrapper.cpp  sksRemoveOutlierPointsWrapper.h
Code/PythonPyBind/: CMakeLists.txt  sksLibPython.cpp
Code/UnityWrapper/: CMakeLists.txt  sksUnityWrapper.cpp  sksUnityWrapper.h
Docker/x86_64/: Dockerfile
Documentation/: CMakeLists.txt  License.dox  MainPage.dox.in
Documentation/Licenses/: ArrayFireAndTheirThirdPartyLicenses.txt
Testing/: CMakeLists.txt  mpCudaTest.cu  sksBasicTest.cpp  sksCatchMain.cpp  sksCatchMain.h  sksCommandLineArgsTest.cpp  sksDownSampleTest.cpp  sksFeatureMatchRANSACTest.cpp  sksFeatureMatchTest.cpp  sksGeneralizedICPTest.cpp  sksICPTest.cpp  sksRemoveOutliersTest.cpp
Testing/Data/SurfaceBasedRegistrationData/: README.md  fran_cut.txt  fran_cut_transformed.txt  fran_cut_transformed.vtk  matrix.4x4
Testing/Data/SytheticSurfaceExample/: model.ply  model_orig.ply  recon.ply
Testing/python/: test_cloud_reduction.py  test_generalised_icp.py  test_icp.py
Utilities/CppCheck/: SKSURGERYPCLCPPCppCheck.cmake
Utilities/Doxygen/: doxygen.config.in  sksurgerypclcppdoxygen.pl.in
Utilities/KWStyle/: SKSURGERYPCLCPPHeader.h  SKSURGERYPCLCPPKWS.xml.in  SKSURGERYPCLCPPKWStyle.cmake
